@@ -33,10 +33,10 @@ public class BlendingAttribute extends Attribute {
 	 * front to back). */
 	public boolean blended;
 	/** Specifies how the (incoming) red, green, blue source blending factors are computed (default: GL_SRC_ALPHA) */
-	public int sourceFunction;
+	public int sourceFunctionRGB;
 	/** Specifies how the (existing) red, green, blue destination blending factors are computed (default:
 	 * GL_ONE_MINUS_SRC_ALPHA) */
-	public int destFunction;
+	public int destFunctionRGB;
 	/** Specifies how the (incoming) alpha source blending factor is computed (default: GL_SRC_ALPHA) */
 	public int sourceFunctionAlpha;
 	/** Specifies how the (existing) alpha destination blending factor is computed (default: GL_ONE_MINUS_SRC_ALPHA) */
@@ -56,8 +56,8 @@ public class BlendingAttribute extends Attribute {
 		final int destFuncAlpha, final int equationRGB, final int equationAlpha, final float opacity) {
 		super(Type);
 		this.blended = blended;
-		this.sourceFunction = sourceFuncRGB;
-		this.destFunction = destFuncRGB;
+		this.sourceFunctionRGB = sourceFuncRGB;
+		this.destFunctionRGB = destFuncRGB;
 		this.sourceFunctionAlpha = sourceFuncAlpha;
 		this.destFunctionAlpha = destFuncAlpha;
 		this.equationRGB = equationRGB;
@@ -86,8 +86,8 @@ public class BlendingAttribute extends Attribute {
 	}
 
 	public BlendingAttribute (final BlendingAttribute copyFrom) {
-		this(copyFrom == null || copyFrom.blended, copyFrom == null ? GL20.GL_SRC_ALPHA : copyFrom.sourceFunction,
-			copyFrom == null ? GL20.GL_ONE_MINUS_SRC_ALPHA : copyFrom.destFunction,
+		this(copyFrom == null || copyFrom.blended, copyFrom == null ? GL20.GL_SRC_ALPHA : copyFrom.sourceFunctionRGB,
+			copyFrom == null ? GL20.GL_ONE_MINUS_SRC_ALPHA : copyFrom.destFunctionRGB,
 			copyFrom == null ? GL20.GL_SRC_ALPHA : copyFrom.sourceFunctionAlpha,
 			copyFrom == null ? GL20.GL_ONE_MINUS_SRC_ALPHA : copyFrom.destFunctionAlpha,
 			copyFrom == null ? GL20.GL_FUNC_ADD : copyFrom.equationRGB, copyFrom == null ? GL20.GL_FUNC_ADD : copyFrom.equationAlpha,
@@ -103,8 +103,8 @@ public class BlendingAttribute extends Attribute {
 	public int hashCode () {
 		int result = super.hashCode();
 		result = 947 * result + (blended ? 1 : 0);
-		result = 947 * result + sourceFunction;
-		result = 947 * result + destFunction;
+		result = 947 * result + sourceFunctionRGB;
+		result = 947 * result + destFunctionRGB;
 		result = 947 * result + sourceFunctionAlpha;
 		result = 947 * result + destFunctionAlpha;
 		result = 947 * result + equationRGB;
@@ -118,8 +118,8 @@ public class BlendingAttribute extends Attribute {
 		if (type != o.type) return (int)(type - o.type);
 		BlendingAttribute other = (BlendingAttribute)o;
 		if (blended != other.blended) return blended ? 1 : -1;
-		if (sourceFunction != other.sourceFunction) return sourceFunction - other.sourceFunction;
-		if (destFunction != other.destFunction) return destFunction - other.destFunction;
+		if (sourceFunctionRGB != other.sourceFunctionRGB) return sourceFunctionRGB - other.sourceFunctionRGB;
+		if (destFunctionRGB != other.destFunctionRGB) return destFunctionRGB - other.destFunctionRGB;
 		if (sourceFunctionAlpha != other.sourceFunctionAlpha) return sourceFunctionAlpha - other.sourceFunctionAlpha;
 		if (destFunctionAlpha != other.destFunctionAlpha) return destFunctionAlpha - other.destFunctionAlpha;
 		if (equationRGB != other.equationRGB) return equationRGB - other.equationRGB;
